--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ body {
   font-size: 13px;
   font-family: 'Ubuntu', sans-serif;
   background: #636363;
-  color: #EDEDED;
+  color: #0080ff;
   overflow: hidden;
 }
 
