--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body {
   /*font-family: Verdana, Arial, Tahoma, sans-serif;*/
   font-size: 13px;
   font-family: 'Ubuntu', sans-serif;
-  background: #636363;
+  background: #ededed;
   color: #0080ff;
   overflow: hidden;
 }
