--- a/css/style.css
+++ b/css/style.css
@@ -164,7 +164,7 @@ ul {
 }
 #story > div {
   display: none;
-  text-shadow: 0px 1px 10px #000;
+  text-shadow: 1px 1px 10px #e5e5e5;
 }
 #story p {
   font-size: 19px;
